# sample-based-methods-in-reinforcement-learning

./: README.md  pyproject.toml
A0 (Week 1)/: Blackjack.ipynb
A1 (Week 2)/: assignment.ipynb
A2 (Week 3)/: assignment.ipynb
A3 (Week 4)/: assignment.ipynb
